--- a/Redfin/Cucumber/Gemfile
+++ b/Redfin/Cucumber/Gemfile
@@ -1,5 +1,7 @@
 source "https://rubygems.org" do
     gem 'cucumber', '~> 3.1.0'
+    gem 'capybara', '~> 3.11.1'
     gem 'rspec', '~> 3.7.0'
+    gem 'selenium-webdriver', '~> 3.141.0'
     gem 'watir', '~> 6.0'
 end
