--- a/Zillow/Faraday/Gemfile
+++ b/Zillow/Faraday/Gemfile
@@ -1,5 +1,5 @@
 source "https://rubygems.org" do
     gem 'faraday', '~> 0.15.3'
     gem 'rspec', '~> 3.7.0'
-    gem 'nokogiri'
+    gem 'nokogiri', '~> 1.8.5'
 end
